# multi-agent-economy

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
examples/: competitive_economy.py  simple_pipeline.py
src/: __init__.py  economy.py  main.py
src/agents/: __init__.py  base_agent.py  editor.py  publisher.py  researcher.py  translator.py  writer.py
tests/: test_agents.py  test_economy.py
